force-app/main/default/objects/RS_RCV_Promo_Floor_Discount_Lookup__c/RS_RCV_Promo_Floor_Discount_Lookup__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used in Price rule, to store floor discount to be given based on Storage Region</description>
    <label>RS-RCV Promo Floor Discount Lookup</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>RS-RCV Promo Floor Discount Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RS-RCV Promo Floor Discount Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>