force-app/main/default/objects/RS_RCV_Promo_Floor_Discount_Lookup__c/fields/Floor_Discount__c.field-meta.xml
<CustomField>
    <fullName>Floor_Discount__c</fullName>
    <label>Floor Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>