force-app/main/default/objects/RS_RCV_Promo_Floor_Discount_Lookup__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>RS-RCV Promo Floor Discount Lookup</relationshipLabel>
    <relationshipName>RS_RCV_Promo_Floor_Discount_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>