force-app/main/default/objects/RS_RCV_Promo_Floor_Discount_Lookup__c/fields/Storage_Region_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Storage_Region_Bundle__c</fullName>
    <label>Storage Region Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard - Zone 1</fullName>
            </value>
            <value>
                <fullName>Standard - Zone 2</fullName>
            </value>
            <value>
                <fullName>Gov Cloud</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>